Include Jsearch, arbitnow API for external Job Fetching and displaying on home screen

--- a/Backend/JobPortal.API/JobPortal.API/appsettings.json
+++ b/Backend/JobPortal.API/JobPortal.API/appsettings.json
@@ -6,23 +6,28 @@
     }
   },
 
-  //SQL Connection
+ 
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=job_portal_cf;User=root;Password=password;"
   },
 
-  //JWT Configuration
+ 
   "Jwt": {
     "Key": "THIS_IS_A_SUPER_SECRET_KEY_123456",
     "Issuer": "JobPortal.API",
     "Audience": "JobPortal.Client",
     "ExpiryMinutes": 60
   },
-  //Gemini AI Integration
+ 
   "GeminiAI": {
     "ApiKey": "AIzaSyCn2VFLMQz80-RIn6YK6OtkAGDBCwynfzU",
     "Model": "gemini-pro"
+  },
+
+  
+  "JSearch": {
+    "ApiKey": "4174542efemshf6f71c1d2a8cfa4p1da324jsn2ede6cf5722e"
   }
 
 
