Add .env for keeping all API's safely

--- a/Backend/JobPortal.API/JobPortal.API/appsettings.json
+++ b/Backend/JobPortal.API/JobPortal.API/appsettings.json
@@ -6,29 +6,25 @@
     }
   },
 
- 
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=job_portal_cf;User=root;Password=password;"
-  },
-
- 
-  "Jwt": {
-    "Key": "THIS_IS_A_SUPER_SECRET_KEY_123456",
-    "Issuer": "JobPortal.API",
-    "Audience": "JobPortal.Client",
-    "ExpiryMinutes": 60
-  },
- 
-  "GeminiAI": {
-    "ApiKey": "AIzaSyCn2VFLMQz80-RIn6YK6OtkAGDBCwynfzU",
-    "Model": "gemini-pro"
-  },
-
   
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=${DB_SERVER};Database=${DB_NAME};User=${DB_USER};Password=${DB_PASSWORD};"
+  },
+
+  "Jwt": {
+    "Key": "${JWT_KEY}",
+    "Issuer": "${JWT_ISSUER}",
+    "Audience": "${JWT_AUDIENCE}",
+    "ExpiryMinutes": "${JWT_EXPIRY_MINUTES}"
+  },
+
+  "GeminiAI": {
+    "ApiKey": "${GEMINI_API_KEY}",
+    "Model": "${GEMINI_MODEL}"
+  },
+
   "JSearch": {
-    "ApiKey": "4174542efemshf6f71c1d2a8cfa4p1da324jsn2ede6cf5722e"
+    "ApiKey": "${JSEARCH_API_KEY}"
   }
-
-
 }
